--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,120 @@
-
+.jumbotron_ht{
+  height: 450px;
+  color: white;
+}
+footer{
+  height: 300px;
+}
 .txt_center{
   text-align: center;
 }
-
 .fl_right{
   float: right;
 }
-
-
 .bg_lightblue{
-  background-color: lightblue;
+  background-color: #2c3e50;
 }
-
 .bg_lightgreen{
-  background-color: lightgreen;
+  background-color: #1abc9c;
 }
-
 .bg_darkblue{
-  background-color: darkblue;
+  background-color: #1a252f;
 }
 .mg_custom{
   margin: 20px 0;
+}
+.txt_white{
+  color: white;
+}
+.py_40{
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.icons i{
+  margin: 0 10px;
+}
+.about,
+.contact_me{
+  height: 500px;
+}
+.jumbotron img{
+  height: 200px;
+}
+
+.border_round{
+  border: 1px solid white;
+  border-radius: 50px;
+  padding: 5px;
+}
+
+.txt_align{
+  position: relative;
+  top:50%;
+  transform: translateY(50%);
+}
+
+.hover_plus{
+  background-color: black;
+  height: 250px;
+}
+
+
+
+.portfolio img{
+  height: 250px;
+}
+
+.divider_center{
+  display: inline-block;
+}
+.divider_center img{
+  height: 25px;
+  width: 25px;
+}
+.divder_line_top{
+  display: inline-block;
+  width: 20%;
+  height: 4px;
+  background-color: white;
+  border-radius: 5px;
+}
+.divder_line{
+  display: inline-block;
+  width: 20%;
+  height: 4px;
+  background-color: #2c3e50;
+  border-radius: 5px;
+}
+
+.items{
+  position: relative;
+  height: 250px;
+}
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all 0.2s ease-in-out;
+  opacity: 0;
+  background-color: rgba(26, 188, 156, 0.9);
+  height: 100% !important;
+  width: 96.2%;
+}
+
+.overlay:hover{
+  opacity: 1;
+ cursor: pointer;
+}
+
+.plus_item{
+  height: 250px;
+  text-align: center;
+}
+
+.plus_item img{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height:40px;
 }
