--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,29 @@
+.col-sm-12,
+.col-xs-12{
+  text-align: center;
+}
+.navbar-inverse .navbar-nav>li>a{
+  color: white;
+}
+
+.navbar-brand > a{
+  color: white !important;
+}
+
+.line_star_top,
+.line_star_middle,
+.line_star_bottom{
+  margin: 20px 0;
+}
+.txt_color{
+  color: #2c3e50;
+}
 .jumbotron_ht{
   height: 450px;
   color: white;
 }
 footer{
-  height: 300px;
+  height: 400px;
 }
 .txt_center{
   text-align: center;
@@ -26,6 +46,7 @@ footer{
 .txt_white{
   color: white;
 }
+
 .py_40{
   padding-top: 40px;
   padding-bottom: 40px;
@@ -48,9 +69,8 @@ footer{
 }
 
 .txt_align{
-  position: relative;
-  top:50%;
-  transform: translateY(50%);
+  height: 100%;
+  align-items: center;
 }
 
 .hover_plus{
@@ -98,7 +118,7 @@ footer{
   opacity: 0;
   background-color: rgba(26, 188, 156, 0.9);
   height: 100% !important;
-  width: 96.2%;
+  width: 100% !important;
 }
 
 .overlay:hover{
@@ -117,4 +137,58 @@ footer{
   left: 50%;
   transform: translate(-50%, -50%);
   height:40px;
+}
+.about_color{
+  color: white;
+}
+
+.about_color h2{
+  font-size: bold;
+}
+.divder_line_bottom{
+  display: inline-block;
+  width: 10%;
+  height: 4px;
+  background-color: white;
+  border-radius: 5px;
+}
+
+
+.btn{
+  margin-top: 10px;
+  background-color: rgba(26, 188, 156, 0.9);
+  font-size: 30px;
+  border: 2px inset white;
+
+}
+
+.my_50px{
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.txt_size p{
+  text-align: left !important;
+  font-size: 20px;
+}
+
+.button_download{
+  font-size: 25px;
+  color: white;
+  text-decoration: none;
+  border: 2px inset white;
+  padding: 10px;
+}
+
+.button_holder{
+  margin-top: 40px;
+}
+
+
+.form-control{
+  border: 0;
+  box-shadow: none;
+  border-radius: 0;
+  border-bottom: 1px solid #c8c8c8;
+  padding: 0
 }
